--- a/trunk/package/analogues/NAMESPACE
+++ b/trunk/package/analogues/NAMESPACE
@@ -1,6 +1,7 @@
 export(applyThreshold)
 export(createParameters)
 export(cropInteractive)
+export(dissimilarity)
 export(radMPoints)
 export(loadDataGRASS)
 export(loadWeightsGRASS)
