--- a/trunk/package/analogues/DESCRIPTION
+++ b/trunk/package/analogues/DESCRIPTION
@@ -8,8 +8,7 @@ Maintainer: Johannes Signer <jmsigner@gmail.com>
 Description: Calculate climate analogues
 License: GPL3
 LazyLoad: yes
-Collate: 'applyThreshold.R' 'ccafsMPoint.R' 'ccafsMPoints.R'
-    'ccafsPoint.R' 'createParameters.R' 'cropInteractive.R'
-    'dissimilarity.R' 'halMPoints.R' 'loadDataGrass.R' 'loadData.R'
-    'loadGridsFromFile.R' 'loadWeights.R' 'report.R' 'summary.R'
-    'util.R'
+Collate: 'applyThreshold.R' 'ccafsMPoints.R' 'ccafsPoint.R'
+    'createParameters.R' 'cropInteractive.R' 'dissimilarity.R'
+    'halMPoints.R' 'loadDataGrass.R' 'loadData.R' 'loadGridsFromFile.R'
+    'loadWeights.R' 'report.R' 'summary.R' 'util.R'
