--- a/package/analogues/DESCRIPTION
+++ b/package/analogues/DESCRIPTION
@@ -8,7 +8,8 @@ Maintainer: Johannes Signer <jmsigner@gmail.com>
 Description: Calculate climate analogues
 License: GPL3
 LazyLoad: yes
-Collate: 'applyThreshold.R' 'ccafsMPoints.R' 'ccafsPoint.R'
-    'createParameters.R' 'cropInteractive.R' 'dissimilarity.R'
-    'halMPoints.R' 'loadDataGrass.R' 'loadData.R' 'loadGridsFromFile.R'
+Collate: 'applyThreshold.R' 'ccafsMPointsPercentDiff.R'
+    'ccafsMPoints.R' 'ccafsPoint.R' 'createParameters.R'
+    'cropInteractive.R' 'dissimilarity.R' 'halMPoints.R'
+    'loadDataGrass.R' 'loadData.R' 'loadGridsFromFile.R'
     'loadWeights.R' 'report.R' 'summary.R' 'util.R'
