--- a/trunk/package/analogues/NAMESPACE
+++ b/trunk/package/analogues/NAMESPACE
@@ -5,6 +5,8 @@ export(createParameters)
 export(cropInteractive)
 export(dissimilarity)
 export(radMPoints)
+export(mrdMPoints)
+export(madMPoints)
 export(loadDataGRASS)
 export(loadWeightsGRASS)
 export(loadData)
