--- a/trunk/package/analogues/NAMESPACE
+++ b/trunk/package/analogues/NAMESPACE
@@ -4,13 +4,16 @@ export(ccafsMPointsPercentDiff)
 export(createParameters)
 export(cropInteractive)
 export(dissimilarity)
+export(dissimilarityPoints)
 export(radMPoints)
 export(mrdMPoints)
 export(madMPoints)
 export(loadData)
+export(loadDataPoints)
 export(loadDataGRASS)
 export(loadWeightsGRASS)
 export(loadGridsFromFiles)
 export(loadWeights)
+export(loadWeightsPoints)
 export(report)
 export(summariseRuns)
